Fix glitch on iphone

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -254,7 +254,7 @@ and (max-width: 480px) {
     text-align: center;
   }
 
-  nav:hover #navigation, nav:focus #navigation {
+  #index_bars:hover #navigation, #index_bars:focus #navigation {
     display: block;
     text-align: center;
     position: absolute;
